--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -26,115 +26,97 @@
 
             <div class="menu_section">
                 <h3>General</h3>
-                <ul class="nav side-menu">
-                    <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
-                        <ul class="nav child_menu" style="display: none">
-                            <li ui-sref-active="active"><a href="index.html">Dashboard</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="index2.html">Dashboard2</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="index3.html">Dashboard3</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
-                        <ul class="nav child_menu" style="display: none">
-                            <li ui-sref-active="active"><a href="form.html">General Form</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="form_advanced.html">Advanced Components</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="form_validation.html">Form Validation</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="form_wizards.html">Form Wizard</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="form_upload.html">Form Upload</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="form_buttons.html">Form Buttons</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a><i class="fa fa-desktop"></i> UI Elements <span class="fa fa-chevron-down"></span></a>
-                        <ul class="nav child_menu" style="display: none">
-                            <li ui-sref-active="active"><a href="general_elements.html">General Elements</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="media_gallery.html">Media Gallery</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="typography.html">Typography</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="icons.html">Icons</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="glyphicons.html">Glyphicons</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="widgets.html">Widgets</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="invoice.html">Invoice</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="inbox.html">Inbox</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="calender.html">Calender</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
-                        <ul class="nav child_menu" style="display: none">
-                            <li ui-sref-active="active"><a href="tables.html">Tables</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="tables_dynamic.html">Table Dynamic</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
-                        <ul class="nav child_menu" style="display: none">
-                            <li ui-sref-active="active"><a href="chartjs.html">Chart JS</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="chartjs2.html">Chart JS2</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="morisjs.html">Moris JS</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="echarts.html">ECharts </a>
-                            </li>
-                            <li ui-sref-active="active"><a href="other_charts.html">Other Charts </a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <div class="menu_section">
-                <h3>Live On</h3>
-                <ul class="nav side-menu">
-                    <li><a><i class="fa fa-bug"></i> Additional Pages <span class="fa fa-chevron-down"></span></a>
-                        <ul class="nav child_menu" style="display: none">
-                            <li ui-sref-active="active"><a href="e_commerce.html">E-commerce</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="projects.html">Projects</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="project_detail.html">Project Detail</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="contacts.html">Contacts</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="profile.html">Profile</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a><i class="fa fa-windows"></i> Extras <span class="fa fa-chevron-down"></span></a>
-                        <ul class="nav child_menu" style="display: none">
-                            <li ui-sref-active="active"><a href="page_404.html">404 Error</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="page_500.html">500 Error</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="plain_page.html">Plain Page</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="login.html">Login Page</a>
-                            </li>
-                            <li ui-sref-active="active"><a href="pricing_tables.html">Pricing Tables</a>
-                            </li>
 
+                <ul class="nav side-menu">
+                    <sidebar-search></sidebar-search>
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                    </li>
+                    <li ui-sref-active="active">
+
+                        <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a>
+
+                    </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.table"><i class="fa fa-table fa-fw"></i> Tables</a>
+                    </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Forms</a>
+                    </li>
+                    <li ng-class="{active: collapseVar==1}">{{dropDown}}
+                        <a href="" ng-click="check(1)"><i class="fa fa-wrench fa-fw"></i> UI Elements<span
+                                class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level child_menu" collapse="collapseVar!=1">
+                            <li ui-sref-active="active">
+                                <a ui-sref="dashboard.panels-wells">Panels and Wells</a>
+                            </li>
+                            <li ui-sref-active="active">
+                                <a ui-sref="dashboard.buttons">Buttons</a>
+                            </li>
+                            <li ui-sref-active="active">
+                                <a ui-sref="dashboard.notifications">Notifications</a>
+                            </li>
+                            <li ui-sref-active="active">
+                                <a ui-sref="dashboard.typography">Typography</a>
+                            </li>
+                            <li ui-sref-active="active">
+                                <a ui-sref="dashboard.icons"> Icons</a>
+                            </li>
+                            <li ui-sref-active="active">
+                                <a ui-sref="dashboard.grid">Grid</a>
+                            </li>
                         </ul>
+                        <!-- /.nav-second-level -->
                     </li>
-                    <li><a><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a>
+                    <li ng-class="{active: collapseVar==2}">
+                        <a href="" ng-click="check(2)"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span
+                                class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level child_menu" collapse="collapseVar!=2">
+                            <li>
+                                <a href="">Second Level Item</a>
+                            </li>
+                            <li>
+                                <a href="">Second Level Item</a>
+                            </li>
+                            <li ng-init="third=!third" ng-class="{active: multiCollapseVar==3}">
+                                <a href="" ng-click="multiCheck(3)">Third Level <span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level child_menu" collapse="multiCollapseVar!=3">
+                                    <li>
+                                        <a href="">Third Level Item</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Third Level Item</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Third Level Item</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Third Level Item</a>
+                                    </li>
+
+                                </ul>
+                                <!-- /.nav-third-level -->
+                            </li>
+                        </ul>
+                        <!-- /.nav-second-level -->
                     </li>
+                    <li ng-class="{active:collapseVar==4}">
+                        <a href="" ng-click="check(4)"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span
+                                class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level child_menu" collapse="collapseVar!=4">
+                            <li ng-class="{active: selectedMenu=='blank'}">
+                                <a ui-sref="dashboard.blank" ng-click="selectedMenu='blank'">Blank Page</a>
+                            </li>
+                            <li>
+                                <a ui-sref="login">Login Page</a>
+                            </li>
+                        </ul>
+                        <!-- /.nav-second-level -->
+                    </li>
+
                 </ul>
             </div>
+
 
         </div>
 
