side bar and header edited

--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -2,7 +2,7 @@
     <div class="left_col scroll-view">
 
         <div class="navbar nav_title" style="border: 0;">
-            <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentellela Alela!</span></a>
+            <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span> Music School</span></a>
         </div>
         <div class="clearfix"></div>
 
@@ -14,7 +14,7 @@
             </div>
             <div class="profile_info">
                 <span>Welcome,</span>
-                <h2>Anthony Fernando</h2>
+                <h2>Nadun Indunil</h2>
             </div>
         </div>
 
