home page was added

--- a/app/scripts/directives/header/header.html
+++ b/app/scripts/directives/header/header.html
@@ -1,5 +1,5 @@
 
-<div class="top_nav navbar-fixed-top">
+<div class="top_nav">
 
     <div class="nav_menu">
         <nav class="" role="navigation">
