students page added

--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -2,7 +2,7 @@
     <div class="left_col scroll-view">
 
         <div class="navbar nav_title" style="border: 0;">
-            <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span> Music School</span></a>
+            <a href="index.html" class="site_title"><i class="fa fa-music"></i> <span> Music School</span></a>
         </div>
         <div class="clearfix"></div>
 
@@ -34,7 +34,7 @@
                     </li>
                     <li ui-sref-active="active">
 
-                        <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a>
+                        <a ui-sref="dashboard.students"><i class="fa fa-group fa-fw"></i> Students<span></span></a>
 
                     </li>
                     <li ui-sref-active="active">
