teachers page was added

--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -38,7 +38,7 @@
 
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="dashboard.table"><i class="fa fa-table fa-fw"></i> Tables</a>
+                        <a ui-sref="dashboard.teachers"><i class="fa fa-table fa-fw"></i> Teachers</a>
                     </li>
                     <li ui-sref-active="active">
                         <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Forms</a>
