--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,7 @@
 
     </head>
    
-    <body class="nav-md" >
+    <body class="nav-md" style="background:#F7F7F7;">
 
     <div ng-app="sbAdminApp" >
 
