--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -1,4 +1,4 @@
-<div class="col-md-3 left_col" style="position: fixed">
+<div class="col-md-3 left_col" style="position: fixed;">
     <div class="left_col scroll-view">
 
         <div class="navbar nav_title" style="border: 0;">
