new validate directive was created

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,8 @@
     <!-- sparkline -->
     <script src="js/sparkline/jquery.sparkline.min.js"></script>
 
+    <script src="js/validator/validator.js"></script>
+    <script src="js/form.js"></script>
     <script src="js/custom.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
