student entry form validation was partially done

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <!-- endbuild -->
     
     <!-- build:css(.tmp) styles/main.css -->
+    <link href="styles/icheck/flat/green.css" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/timeline.css">
     <link rel="stylesheet" href="bower_components/metisMenu/dist/metisMenu.min.css">
@@ -26,7 +27,6 @@
     <!-- Custom styling plus plugins -->
     <link href="styles/custom.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/maps/jquery-jvectormap-2.0.1.css" />
-    <link href="styles/icheck/flat/green.css" rel="stylesheet">
     <link href="styles/floatexamples.css" rel="stylesheet" />
     <!-- endbuild -->
     
@@ -63,8 +63,8 @@
     <!-- sparkline -->
     <script src="js/sparkline/jquery.sparkline.min.js"></script>
 
-    <script src="js/validator/validator.js"></script>
-    <script src="js/form.js"></script>
+    <script src="js/parsley/parsley.min.js"></script>
+
     <script src="js/custom.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
