courses was added to side bar

--- a/public/scripts/directives/sidebar/sidebar.html
+++ b/public/scripts/directives/sidebar/sidebar.html
@@ -41,6 +41,9 @@
                         <a ui-sref="dashboard.teachers"><i class="fa fa-table fa-fw"></i> Teachers</a>
                     </li>
                     <li ui-sref-active="active">
+                        <a ui-sref="dashboard.courses"><i class="fa fa-bookmark fa-fw"></i> Courses</a>
+                    </li>
+                    <li ui-sref-active="active">
                         <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Forms</a>
                     </li>
                     <li ng-class="{active: collapseVar==1}">{{dropDown}}
