--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <!-- endbower -->
     <!-- endbuild -->
-    
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <!-- build:css(.tmp) styles/main.css -->
     <link href="styles/icheck/flat/green.css" rel="stylesheet">
 
