--- a/public/scripts/directives/header/header.html
+++ b/public/scripts/directives/header/header.html
@@ -10,7 +10,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="">
                     <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                        <img src="images/img.jpg" alt="">Nadun Indunil
+                        <img src="images/img.jpg" alt=""> {{userName}}
                         <span class=" fa fa-angle-down"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-usermenu animated fadeInDown pull-right">
