--- a/public/scripts/directives/sidebar/sidebar.html
+++ b/public/scripts/directives/sidebar/sidebar.html
@@ -14,7 +14,7 @@
             </div>
             <div class="profile_info">
                 <span>Welcome,</span>
-                <h2>Nadun Indunil</h2>
+                <h2>{{userName}}</h2>
             </div>
         </div>
 
