--- a/public/scripts/directives/sidebar/sidebar.html
+++ b/public/scripts/directives/sidebar/sidebar.html
@@ -1,5 +1,5 @@
 <div class="col-md-3 left_col" style="position: fixed;">
-    <div class="left_col scroll-view">
+    <div class="left_col scroll-view" ng-controller="mainCtrl">
 
         <div class="navbar nav_title" style="border: 0;">
             <a href="index.html" class="site_title"><i class="fa fa-music"></i> <span> Music School</span></a>
@@ -43,7 +43,7 @@
                     <li ui-sref-active="active">
                         <a ui-sref="dashboard.courses"><i class="fa fa-bookmark fa-fw"></i> Courses</a>
                     </li>
-                    <li ui-sref-active="active">
+                    <li ng-show="secLevel" ui-sref-active="active">
                         <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Forms</a>
                     </li>
                     <li ng-class="{active: collapseVar==1}">{{dropDown}}
@@ -122,6 +122,7 @@
 
 
         </div>
+
         <div class="sidebar-footer hidden-small">
             <a data-toggle="tooltip" data-placement="top" title="Settings">
                 <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
