--- a/public/scripts/directives/header/header.html
+++ b/public/scripts/directives/header/header.html
@@ -4,7 +4,7 @@
     <div class="nav_menu" ng-controller="mainCtrl">
         <nav class="" role="navigation">
             <div class="nav toggle">
-                <a id="menu_toggle"><i class="fa fa-bars"></i></a>
+                <a id="menu_toggle"><i class="fa fa-bars">  {{pgName}}</i></a>
             </div>
 
             <ul class="nav navbar-nav navbar-right">
