--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,9 @@
 
     <!--<script src="js/sb-admin-2.js"></script>-->
     <!-- endbuild -->
+    <script type="text/javascript" src="js/notify/pnotify.core.js"></script>
+    <script type="text/javascript" src="js/notify/pnotify.buttons.js"></script>
+    <script type="text/javascript" src="js/notify/pnotify.nonblock.js"></script>
 
     <script>
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
