errors were corrected for a first time login

--- a/public/scripts/directives/header/header.html
+++ b/public/scripts/directives/header/header.html
@@ -2,7 +2,7 @@
 <div class="top_nav">
 
     <div class="nav_menu" ng-controller="mainCtrl">
-        <nav class="" role="navigation">
+        <nav class="" role="navigation" ng-init="mainInit()">
             <div class="nav toggle">
                 <a id="menu_toggle"><i class="fa fa-bars">  {{pgName}}</i></a>
             </div>
