creating adding perf groups

--- a/public/scripts/directives/sidebar/sidebar.html
+++ b/public/scripts/directives/sidebar/sidebar.html
@@ -46,6 +46,9 @@
                     <li ui-sref-active="active">
                         <a ui-sref="dashboard.instruments"><i class="fa fa-bookmark fa-fw"></i> Instruments</a>
                     </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.performanceGroups"><i class="fa fa-bookmark fa-fw"></i> Performance Groups</a>
+                    </li>
                     <li ng-show="secLevel" ui-sref-active="active">
                         <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Forms</a>
                     </li>
