few changes were done in schema

--- a/public/scripts/directives/sidebar/sidebar.html
+++ b/public/scripts/directives/sidebar/sidebar.html
@@ -47,6 +47,9 @@
                         <a ui-sref="dashboard.instruments"><i class="fa fa-bookmark fa-fw"></i> Instruments</a>
                     </li>
                     <li ui-sref-active="active">
+                        <a ui-sref="dashboard.performanceItems"><i class="fa fa-bookmark fa-fw"></i> Performance Items</a>
+                    </li>
+                    <li ui-sref-active="active">
                         <a ui-sref="dashboard.performanceGroups"><i class="fa fa-bookmark fa-fw"></i> Performance Groups</a>
                     </li>
                     <li ng-show="secLevel" ui-sref-active="active">
