editing profile startrd

--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,11 @@
     <script src="js/sparkline/jquery.sparkline.min.js"></script>
 
     <script src="js/parsley/parsley.min.js"></script>
+    <!-- bootstrap progress js -->
+    <script src="js/progressbar/bootstrap-progressbar.min.js"></script>
+    <script src="js/nicescroll/jquery.nicescroll.min.js"></script>
+    <!-- icheck -->
+    <script src="js/icheck/icheck.min.js"></script>
 
     <script src="js/custom.js"></script>
     <!--<script src="public/libs/angular-cookies/angular-cookies.min.js"></script>-->
