--- a/public/scripts/directives/sidebar/sidebar.html
+++ b/public/scripts/directives/sidebar/sidebar.html
@@ -44,87 +44,25 @@
                         <a ui-sref="dashboard.courses"><i class="fa fa-bookmark fa-fw"></i> Courses</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="dashboard.instruments"><i class="fa fa-bookmark fa-fw"></i> Instruments</a>
+                        <a ui-sref="dashboard.instruments"><i class="fa fa-music fa-fw"></i> Instruments</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="dashboard.performanceItems"><i class="fa fa-bookmark fa-fw"></i> Performance Items</a>
+                        <a ui-sref="dashboard.performanceItems"><i class="fa fa-book fa-fw"></i> Performance Items</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="dashboard.performanceGroups"><i class="fa fa-bookmark fa-fw"></i> Performance Groups</a>
+                        <a ui-sref="dashboard.performanceGroups"><i class="fa fa-group fa-fw"></i> Performance Groups</a>
                     </li>
-                    <li ng-show="secLevel" ui-sref-active="active">
-                        <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Forms</a>
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Settings</a>
                     </li>
-                    <li ng-class="{active: collapseVar==1}">{{dropDown}}
-                        <a href="" ng-click="check(1)"><i class="fa fa-wrench fa-fw"></i> UI Elements<span
-                                class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level child_menu" collapse="collapseVar!=1">
-                            <li ui-sref-active="active">
-                                <a ui-sref="dashboard.panels-wells">Panels and Wells</a>
-                            </li>
-                            <li ui-sref-active="active">
-                                <a ui-sref="dashboard.buttons">Buttons</a>
-                            </li>
-                            <li ui-sref-active="active">
-                                <a ui-sref="dashboard.notifications">Notifications</a>
-                            </li>
-                            <li ui-sref-active="active">
-                                <a ui-sref="dashboard.typography">Typography</a>
-                            </li>
-                            <li ui-sref-active="active">
-                                <a ui-sref="dashboard.icons"> Icons</a>
-                            </li>
-                            <li ui-sref-active="active">
-                                <a ui-sref="dashboard.grid">Grid</a>
-                            </li>
-                        </ul>
-                        <!-- /.nav-second-level -->
-                    </li>
-                    <li ng-class="{active: collapseVar==2}">
-                        <a href="" ng-click="check(2)"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span
-                                class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level child_menu" collapse="collapseVar!=2">
-                            <li>
-                                <a href="">Second Level Item</a>
-                            </li>
-                            <li>
-                                <a href="">Second Level Item</a>
-                            </li>
-                            <li ng-init="third=!third" ng-class="{active: multiCollapseVar==3}">
-                                <a href="" ng-click="multiCheck(3)">Third Level <span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level child_menu" collapse="multiCollapseVar!=3">
-                                    <li>
-                                        <a href="">Third Level Item</a>
-                                    </li>
-                                    <li>
-                                        <a href="">Third Level Item</a>
-                                    </li>
-                                    <li>
-                                        <a href="">Third Level Item</a>
-                                    </li>
-                                    <li>
-                                        <a href="">Third Level Item</a>
-                                    </li>
 
-                                </ul>
-                                <!-- /.nav-third-level -->
-                            </li>
-                        </ul>
-                        <!-- /.nav-second-level -->
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.blank"><i class="fa fa-group fa-fw"></i> not allocated</a>
                     </li>
-                    <li ng-class="{active:collapseVar==4}">
-                        <a href="" ng-click="check(4)"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span
-                                class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level child_menu" collapse="collapseVar!=4">
-                            <li ng-class="{active: selectedMenu=='blank'}">
-                                <a ui-sref="dashboard.blank" ng-click="selectedMenu='blank'">Blank Page</a>
-                            </li>
-                            <li>
-                                <a ui-sref="login">Login Page</a>
-                            </li>
-                        </ul>
-                        <!-- /.nav-second-level -->
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.blank"><i class="fa fa-group fa-fw"></i> not allocated</a>
                     </li>
+
 
                 </ul>
             </div>
