--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
 
     <!-- Custom styling plus plugins -->
     <link href="styles/custom.css" rel="stylesheet">
+    <link href="styles/animations.css" rel="stylesheet">
+    <link href="styles/transitions.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/maps/jquery-jvectormap-2.0.1.css" />
     <link href="styles/floatexamples.css" rel="stylesheet" />
     <!-- endbuild -->
@@ -41,6 +43,7 @@
 
 
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <script src="bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
