--- a/public/scripts/directives/sidebar/sidebar.html
+++ b/public/scripts/directives/sidebar/sidebar.html
@@ -53,7 +53,7 @@
                         <a ui-sref="dashboard.performanceGroups"><i class="fa fa-group fa-fw"></i> Performance Groups</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Settings</a>
+                        <a ui-sref="dashboard.blank"><i class="fa fa-edit fa-fw"></i> Settings</a>
                     </li>
 
                     <li ui-sref-active="active">
